# shardb

./: CMakeLists.txt  init_dpdk.sh  install_deps.sh  start_client.sh  start_proposer.sh  start_server.sh
client/: CMakeLists.txt  Makefile
client/include/: datastore.h  main.h  net_util.h
client/src/: client.c  config.c  init.c  net_util.c  runtime.c
cmake/: FindDPDK.cmake  FindRocksDB.cmake
server/: CMakeLists.txt
server/include/: datastore.h  main.h
server/src/: config.c  datastore.c  init.c  runtime.c  server.c
